--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>me.wonwoo</groupId>
-	<artifactId>spring-jms-example</artifactId>
+	<artifactId>spring-amqp-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>spring-jms-example</name>
+	<name>spring-amqp-example</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
